--- a/index.html
+++ b/index.html
@@ -348,24 +348,24 @@ if(document.location.search.substr(1).split('&').indexOf('global=paused')>=0)ks.
 							</div>
 							<div class="prize prize2">
 								<div class="prize-img">
-									<img src="img/prize2.svg" alt="">
+									<img src="img/prize2.png" alt="">
 								</div>
 								<div class="prize-name">Ежедневные</div>
-								<div class="prize-text">Сертификаты, <br>подписки и коды</div>
+								<div class="prize-text">555 баллов на карту <br>лояльности</div>
 							</div>
 							<div class="prize prize3">
 								<div class="prize-img">
 									<img src="img/prize3.svg" alt="">
 								</div>
 								<div class="prize-name">Еженедельные</div>
-								<div class="prize-text">Сертификаты, <br>подписки и коды</div>
+								<div class="prize-text">Мерч от Кати, <br>сертификаты ОЗОН, <br>сертификаты Ламода</div>
 							</div>
 							<div class="prize prize4">
 								<div class="prize-img">
 									<img src="img/prize4.png" alt="">
 								</div>
-								<div class="prize-name">Ежемесячные</div>
-								<div class="prize-text">Гаджеты последнего поколения</div>
+								<div class="prize-name">Главный приз</div>
+								<div class="prize-text">Участие в проекте Кати Адушкиной</div>
 							</div>
 						</div>
 					</div>
