--- a/lk.html
+++ b/lk.html
@@ -191,7 +191,7 @@
 										<div class="check-col-name">Приз</div>
 										<div class="check-col-wrapper">
 											<div class="check-prize-img">
-												<img src="img/555-icon.svg" alt="">
+												<img src="img/prizes/555-icon.svg" alt="">
 											</div>
 											<div class="check-info">
 												<div class="check-prize-name">Баллы на карту</div>
@@ -217,7 +217,7 @@
 										<div class="check-col-name">Приз</div>
 										<div class="check-col-wrapper">
 											<div class="check-prize-img">
-												<img src="img/merch-icon.svg" alt="">
+												<img src="img/prizes/merch-icon.svg" alt="">
 											</div>
 											<div class="check-info">
 												<div class="check-prize-name">Мерч от Кати</div>
