--- a/lk.html
+++ b/lk.html
@@ -512,7 +512,7 @@
                 <div class="popup__inner">
                     <div class="popup__title">Загрузка чека</div>
                     <div class="iframe-wrap">
-                        <iframe src="https://checkservice.emg.ru/Upload?id=e52487c6-e9f4-4108-9eb0-b457daa92452&participantId=3&hash=45264eb40c3d6c866cc4bf77850b74d3" class="iframe" frameborder="0"></iframe>
+                        <iframe src="https://checkservice.emg.ru/angular/?id=fb6d7e54-a8ae-4dbd-b468-b5f70cc5bc4a&participantId=1&hash=ac2086b14edb95a0db0e9f11776a1fa5" class="iframe" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
